add usage to shellrc

--- a/shell/.shellrc
+++ b/shell/.shellrc
@@ -2,12 +2,14 @@
 # Base shell functions for bash and zsh.
 
 # Sets an alias ($1) to value ($2) if $3 exists.
+# Usage: set_alias ip "ip color --auto" ip
 set_alias() {
         # shellcheck disable=SC2139
         hash "$3" >/dev/null 2>&1 && alias "$1"="$2"
 }
 
 # Sources files and directories recursively if they exist.
+# Usage: src_files "/usr/local/etc/bashrc.d/" "/usr/share/doc/pkgfile/command-not-found.bash"
 src_files() {
         local f
         for f in "$@"; do
@@ -22,6 +24,7 @@ src_files() {
 }
 
 # Adds paths to $PATH if they exist.
+# Usage: path_munge "$HOME/.bin" "$HOME/bin"
 path_munge() {
         local f
         for f in "$@"; do
