tmux: remove tmux fingers

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,7 +4,7 @@
 # Tmux initialization with SSH:
 #   -t -- tmux -u new -A -s main
 #
-# Copy to tmux:
+# Copy to tmux clipboard:
 #   cmd | tmux loadb -
 #
 # Reload tmux config:
@@ -35,14 +35,9 @@
 # Set up tmux plug-in manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# Fingers plugin replaces tmux-copycat, tmux-fzf-url, tmux-fpp, it's all-in-one
-#   C-z f to trigger hints (files, URLs, etc) and copy
-set -g @plugin 'Morantron/tmux-fingers'
-set -g @fingers-key f
-set -g @fingers-compact-hints '0'
-
-# Free-form backward search a la tmux-copycat: C-z /
-# https://github.com/tmux-plugins/tmux-copycat/issues/148
+# Use native regex searches
+#   https://github.com/tmux-plugins/tmux-copycat/issues/148
+# Free-form backward search: C-z /
 bind / copy-mode \; send ?
 # URL search: C-z C-u
 bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
