tmux: better documentation of prefix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,34 +8,34 @@
 #   cmd | tmux loadb -
 #
 # Reload tmux config:
-#   C-z r
+#   <prefix> r
 #
 # Hierarchy and terminology.
-#   Session (C-z s)
-#   \- Window (C-z w)
-#    \- Pane (C-z q)
+#   Session (<prefix> s)
+#   \- Window (<prefix> w)
+#    \- Pane (<prefix> q)
 #
 # List all commands:
 #   :list-commands
 #
 # List all keybindings:
-#   C-z ?
+#   <prefix> ?
 #   :list-keys
 #
 # Show option value:
 #   :show-options -g -s <name>
 #
 # Prefix is C-z.
+# Previously C-a. The caveat of C-a is the beginning-of-line shell shortcut.
 
-# Use native regex searches
+# Native regex searches
 #   https://github.com/tmux-plugins/tmux-copycat/issues/148
-# Free-form backward search: C-z /
+# Free-form backward search
 bind / copy-mode \; send ?
-# URL search: C-z C-u
+# URL search
 bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 
 # Prefix keys
-# set -g prefix2 C-a
 set -g prefix C-z
 unbind C-b
 
@@ -74,7 +74,7 @@ set -g default-terminal 'tmux-256color'
 set -as terminal-overrides ',tmux-256color:Tc'
 
 # Enable mouse mode
-#   C-z m to toggle
+#   <prefix> m to toggle
 set -g mouse on
 bind m set -g mouse
 
@@ -94,7 +94,7 @@ set -g display-time 3000
 # Just send ESC.
 set -g escape-time 0
 
-# Emacs key bindings in tmux command prompt (C-z :) are better than vi keys, even for vi users
+# Emacs key bindings in tmux command prompt (<prefix> :) are better than vi keys, even for vi users
 set -g status-keys emacs
 
 # Renumber windows sequentially after closing any of them.
@@ -115,7 +115,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Kill a pane. Confirm before killing.
-# Native: C-z x.
+# Native: <prefix> x.
 bind C-k confirm kill-pane
 bind K confirm kill-pane
 
@@ -128,7 +128,7 @@ bind _ attach -c '#{pane_current_path}' \; display "Changed start directory to #
 # Goyo, toggle status bar visibility for a distraction-free experience
 bind g set status
 
-# Set message style, i.e. C-z :
+# Set message style, i.e. <prefix> :
 set -g message-style fg=yellow,bg=black,bright
 
 # Set status bar style.
