tmux: minor adjustments for prefix keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,12 +35,17 @@ bind / copy-mode \; send ?
 # URL search
 bind C-u copy-mode \; send -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 
-# Prefix keys
-set -g prefix C-z
+# Disable default prefix key.
 unbind C-b
+
+# Set preferred prefix key.
+set -g prefix C-z
 
 # Go to last window.
 bind C-z last-window
+
+# Muscle memory: <prefix> a triggers beginning-of-line.
+bind a send C-a
 
 # Set vi mode keybindings. Mostly intended for copy mode.
 set -g mode-keys vi
