vscode: add alacritty to linux terminal

--- a/vscode/.config/Code - OSS/User/settings.json
+++ b/vscode/.config/Code - OSS/User/settings.json
@@ -3,5 +3,6 @@
     "terminal.integrated.sendKeybindingsToShell": true,
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
-    "editor.selectionClipboard": false
+    "editor.selectionClipboard": false,
+    "terminal.external.linuxExec": "alacritty"
 }
