--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -2,6 +2,7 @@
 # Commands herein are not compatible or interoperable with sway(1)
 # Reference: https://i3wm.org/docs/userguide.html
 
+set $bgcolor #526532
 set_from_resource $black i3.color0
 set_from_resource $red i3.color1
 set_from_resource $green i3.color2
