--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -65,24 +65,6 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+w layout toggle stacking tabbed
 bindsym $mod+e layout toggle split
 
-# set floating windows: generic
-for_window [window_role="About|bubble|pop-up|Preferences|task_dialog"] floating enable
-
-# set floating windows: linux desktop
-for_window [class="Blueman|Lxappearance|Pavucontrol"] floating enable
-
-# set floating windows: linux desktop
-# for_window [window_role="browser-window", class="*Password"] floating enable
-
-# set floating window + workspace assignment: music
-#   spotify | youtube music
-for_window [instance="crx_pjibgclleladliembfgfagdaldikeohf|crx_cinhimbnkkaeohfgghhklpknlkffjgod"] floating disable
-assign [instance="crx_pjibgclleladliembfgfagdaldikeohf|crx_cinhimbnkkaeohfgghhklpknlkffjgod"] → workspace number 9
-assign [class="Clementine|strawberry"] → workspace number $ws9
-
-# use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
@@ -132,6 +114,21 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
+
+# set floating windows: generic
+for_window [window_role="About|bubble|pop-up|Preferences|task_dialog"] floating enable
+
+# set floating windows: linux desktop
+for_window [class="Blueman|Lxappearance|Pavucontrol"] floating enable
+
+# set floating window + workspace assignment: music
+#   spotify | youtube music
+for_window [instance="crx_pjibgclleladliembfgfagdaldikeohf|crx_cinhimbnkkaeohfgghhklpknlkffjgod"] floating disable
+assign [instance="crx_pjibgclleladliembfgfagdaldikeohf|crx_cinhimbnkkaeohfgghhklpknlkffjgod"] → workspace number $ws9
+assign [class="Clementine|strawberry"] → workspace number $ws9
+
 # move workspace to previous monitor
 # prior = page down
 bindsym $mod+Shift+Prior move workspace to output left
@@ -177,8 +174,6 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-set $bgcolor #526532
-
 # move to prev / next workspace on same display
 bindsym $mod+Shift+n workspace prev_on_output
 bindsym $mod+n workspace next_on_output
@@ -192,7 +187,7 @@ workspace_auto_back_and_forth yes
 # rename current workspace on-the-fly, cannot contain spaces
 bindsym $mod+x exec i3-input -F "rename workspace to %s" -P "New name: "
 
-# lock screen, Ctrl+Alt+l
+# lock screen, Ctrl+Alt+l (systemd)
 bindsym Ctrl+Mod1+l exec loginctl lock-session
 
 # set default border
