--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -13,6 +13,7 @@ set_from_resource $gray i3.color8
 bar {
     status_command i3status
     position top
+    workspace_min_width 25
 
     colors {
         background $black
@@ -31,9 +32,6 @@ client.focused_inactive $gray $gray $black $gray
 client.unfocused $black $black $gray $black
 client.urgent $red $red $white $red
 
-# show window title icon
-for_window [all] title_window_icon on
-
 # restart i3 inplace (preserves layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
@@ -41,5 +39,8 @@ bindsym $mod+Shift+r restart
 # present on Keychron K2 keyboard
 # https://github.com/swaywm/sway/issues/4783
 bindsym XF86AudioPlayPause exec playerctl play-pause
+
+# show window title icon
+for_window [all] title_window_icon on
 
 # vim: ft=i3config
