--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -29,4 +29,6 @@ Host *
 
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
+# Troubleshoot:
+#   ssh -vT git@github.com
 Include config.d/*
