ssh config: remove controlmasters from ~/.ssh, use /tmp

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -23,7 +23,7 @@ Host *
 	# Reuse SSH connection to speed up remote login process using multiplexing.
 	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
 	# Keep this block last as it is not compatible with hterm (chrome).
-	ControlPath ~/.ssh/controlmasters/%C
+	ControlPath /tmp/ssh-control-%C
 	ControlPersist yes
 	ControlMaster auto
 
