ssh config: misc

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -2,33 +2,36 @@
 # Public keys: https://github.com/thiagowfx.keys
 
 Host *
-	# Specifies whether keys should be automatically added to a running ssh-agent(1).
-	# If this option is set to yes and a key is loaded from a file, the key and its
-	# passphrase are added to the agent with the default lifetime, as if by ssh-add(1).
+	# Specifies whether keys should be automatically added to a running
+	# ssh-agent(1). If this option is set to yes and a key is loaded from a
+	# file, the key and its passphrase are added to the agent with the
+	# default lifetime, as if by ssh-add(1).
 	AddKeysToAgent yes
 
-	# Requests compression of all data
+	# Requests compression of all data.
 	Compression yes
 
-	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
+	# Keep-alive. The default is 0, indicating that these messages will not
+	# be sent to the server.
 	ServerAliveInterval 300
 
+	# Reuse SSH connection to speed up remote login process using multiplexing.
+	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
+	# This block is not compatible with hterm (chrome).
+	ControlPath /tmp/ssh-control-%C
+	ControlPersist yes
+	ControlMaster auto
+
 	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
-	# We cannot enable this in workstations otherwise git ssh authentication will fail.
+	# We cannot enable this in workstations otherwise git ssh authentication fails.
 	# hterm (chrome) equivalent ssh arguments:
 	#   -t -- tmux -u new -A -s main
 	# RequestTTY yes
 	# RemoteCommand tmux -u new -A -s main
 
-	# Reuse SSH connection to speed up remote login process using multiplexing.
-	# https://en.wikibooks.org/wiki/OpenSSH/Cookbook/Multiplexing
-	# Keep this block last as it is not compatible with hterm (chrome).
-	ControlPath /tmp/ssh-control-%C
-	ControlPersist yes
-	ControlMaster auto
-
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
+#
 # Troubleshoot:
 #   ssh -vT git@github.com
 Include config.d/*
