tmux: make hostname more cyan

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -144,7 +144,7 @@ set -g status-left-length 40
 set -g status-right-length 65
 
 # Set status bar content.
-set -g status-left "#[fg=cyan]#H #[fg=colour242]• "
+set -g status-left "#[fg=colour51]#H #[fg=colour242]• "
 set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off}"
 
 # Set non-active window title style.
