tmux: remove unnecessary default token

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -144,8 +144,10 @@ set -g status-left-length 40
 set -g status-right-length 65
 
 # Set status bar content.
+#  #[default]
+#  #[dim]
 set -g status-left "#[fg=colour51]#H #[fg=colour242]• #[fg=cyan]#S #[fg=colour242]• "
-set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off }#[default]"
+set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off }"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
