--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -43,4 +43,11 @@ bindsym XF86AudioPlayPause exec playerctl play-pause
 # show window title icon
 for_window [all] title_window_icon on
 
+# Autostart XDG applications (.desktop files).
+# https://wiki.archlinux.org/title/XDG_Autostart
+#
+# Troubleshooting:
+#   dex -ade i3
+exec dex --autostart --environment i3
+
 # vim: ft=i3config
