--- a/shell/.shellrc
+++ b/shell/.shellrc
@@ -1,7 +1,7 @@
 # shellcheck source=/dev/null
 # Base shell functions for bash and zsh.
 
-# Adds paths to $PATH if they exist.
+# Add paths to $PATH if they exist.
 # Usage: path_munge "$HOME/.bin" "$HOME/bin"
 path_munge() {
         local f
@@ -12,14 +12,14 @@ path_munge() {
         done
 }
 
-# Sets an alias ($1) to value ($2) if $3 exists.
+# Set alias ($1) to value ($2) if $3 exists.
 # Usage: set_alias ip "ip color --auto" ip
 set_alias() {
         # shellcheck disable=SC2139
         hash "$3" >/dev/null 2>&1 && alias "$1"="$2"
 }
 
-# Sources files and directories recursively if they exist.
+# Source files and directories recursively if they exist.
 # Usage: src_files "/usr/local/etc/bashrc.d/" "/usr/share/doc/pkgfile/command-not-found.bash"
 src_files() {
         local f
