sway: remove dex as x11 apps do not work well with systray/i3bar

--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -2,6 +2,13 @@
 # Commands herein are not compatible or interoperable with sway(1)
 # Reference: https://i3wm.org/docs/userguide.html
 
+# Autostart XDG applications (.desktop files).
+# https://wiki.archlinux.org/title/XDG_Autostart
+#
+# Troubleshooting:
+#   dex -ade i3
+exec dex --autostart --environment i3
+
 # multimedia music player keys: i3 only, not recognized by sway
 # present on Keychron K2 keyboard
 # https://github.com/swaywm/sway/issues/4783
