i3: add xscreensaver integration

--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -9,6 +9,10 @@
 #   dex -ade i3
 exec dex --autostart --environment i3
 
+# lock screen, Ctrl+Alt+l (systemd)
+exec --no-startup-id xss-lock -l -n /usr/lib/xsecurelock/dimmer -- xsecurelock
+bindsym Ctrl+Mod1+l exec loginctl lock-session
+
 # multimedia music player keys: i3 only, not recognized by sway
 # present on Keychron K2 keyboard
 # https://github.com/swaywm/sway/issues/4783
