--- a/sway/.config/sway/conf.d/sway.conf
+++ b/sway/.config/sway/conf.d/sway.conf
@@ -11,6 +11,9 @@ output "*" scale 1.5
 # Wallpaper
 output "*" bg ~/.wallpaper fill
 
+# Gaps a la i3-gaps
+gaps inner 10
+
 # Start i3bar to display a workspace and status bar
 bar {
     status_command i3status
