ssh: hash known_hosts
thank you Michael W Lucas

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -22,6 +22,10 @@ Host *
 	ControlPersist yes
 	ControlMaster auto
 
+	# Automatically hash new host keys added to ~/.ssh/known_hosts.
+	# Manually for pre-existing keys: ssh-keygen -H
+	HashKnownHosts yes
+
 	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
 	# We cannot enable this in workstations otherwise git ssh authentication fails.
 	# hterm (chrome) equivalent ssh arguments:
