ssh config: simplify

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,6 +1,9 @@
 # SSH Client config.
-# Public keys: https://github.com/thiagowfx.keys
-
+#
+# Public keys in plain text: https://github.com/thiagowfx.keys
+#
+# Quick flags to spawn or attach to an existing tmux session:
+#   ssh user@host -t -- tmux -u new -A -s main
 Host *
 	# Specifies whether keys should be automatically added to a running
 	# ssh-agent(1). If this option is set to yes and a key is loaded from a
@@ -25,13 +28,6 @@ Host *
 	# Automatically hash new host keys added to ~/.ssh/known_hosts.
 	# Manually for pre-existing keys: ssh-keygen -H
 	HashKnownHosts yes
-
-	# Always start tmux, forcing unicode, attaching to and/or creating a session named "main".
-	# We cannot enable this in workstations otherwise git ssh authentication fails.
-	# hterm (chrome) equivalent ssh arguments:
-	#   -t -- tmux -u new -A -s main
-	# RequestTTY yes
-	# RemoteCommand tmux -u new -A -s main
 
 # Load user scripts and functions if existing. Order is important.
 # Corp config is handled as part of .config.d.
