sway: add XF86AudioPlayPause via keycode
keysym does not work on sway, but works on i3

c.f. https://github.com/swaywm/sway/issues/4783

--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -13,8 +13,7 @@ exec dex --autostart --environment i3
 exec --no-startup-id xss-lock -l -n /usr/lib/xsecurelock/dimmer -- xsecurelock
 bindsym Ctrl+Mod1+l exec loginctl lock-session
 
-# multimedia music player keys: i3 only, not recognized by sway
-# present on Keychron K2 keyboard
+# XF86AudioPlayPause is not recognized by sway, add it only to i3
 # https://github.com/swaywm/sway/issues/4783
 bindsym XF86AudioPlayPause exec playerctl play-pause
 
