--- a/sway/.config/sway/conf.d/sway.conf
+++ b/sway/.config/sway/conf.d/sway.conf
@@ -14,6 +14,10 @@ output "*" bg ~/.wallpaper fill
 # Gaps a la i3-gaps
 gaps inner 10
 
+# XF86AudioPlayPause is not recognized by sway: xmodmap -pke | grep XF86AudioPlay
+# https://github.com/swaywm/sway/issues/4783
+bindcode 172 exec playerctl play-pause
+
 # Start i3bar to display a workspace and status bar
 bar {
     status_command i3status
