--- a/i3/.config/i3/conf.d/i3.conf
+++ b/i3/.config/i3/conf.d/i3.conf
@@ -10,7 +10,7 @@
 exec dex --autostart --environment i3
 
 # lock screen, Ctrl+Alt+l (systemd)
-exec --no-startup-id xss-lock -l -n /usr/lib/xsecurelock/dimmer -- xsecurelock
+exec --no-startup-id xss-lock -l -- i3lock -c 222222
 bindsym Ctrl+Mod1+l exec loginctl lock-session
 
 # XF86AudioPlayPause is not recognized by sway, add it only to i3
