few tweaks from macos

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -73,10 +73,11 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Set $TERM and force 256 colors.
+# Warning: tmux-256 color does not work well in macOS.
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-a-256-colour-terminal
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
-set -g default-terminal 'tmux-256color'
-set -as terminal-overrides ',tmux-256color:Tc'
+set -g default-terminal 'xterm-256color'
+set -as terminal-overrides ',xterm-256color:Tc'
 
 # Enable mouse mode
 #   <prefix> m to toggle
