vscode: insert final newline

--- a/vscode/.config/Code - OSS/User/settings.json
+++ b/vscode/.config/Code - OSS/User/settings.json
@@ -4,5 +4,6 @@
     "explorer.confirmDragAndDrop": false,
     "terminal.external.linuxExec": "alacritty",
     "terminal.integrated.sendKeybindingsToShell": true,
-    "workbench.colorTheme": "One Dark Pro"
+    "workbench.colorTheme": "One Dark Pro",
+    "files.insertFinalNewline": true
 }
