--- a/vscode/.config/Code - OSS/User/settings.json
+++ b/vscode/.config/Code - OSS/User/settings.json
@@ -5,5 +5,6 @@
     "terminal.external.linuxExec": "alacritty",
     "terminal.integrated.sendKeybindingsToShell": true,
     "workbench.colorTheme": "One Dark Pro",
-    "files.insertFinalNewline": true
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true
 }
