--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -164,5 +164,9 @@ set -g window-status-bell-style fg=red,bg=default,bright
 # Make active pane more distinct.
 set -g pane-active-border-style fg=yellow,bg=default
 
+# Set pane border with current command.
+set -wg pane-border-status top
+set -g pane-border-format '#[bold]#{pane_current_command}'
+
 # Load corp configs if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
