tmux: prefer full hostname instead of short hostname

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -147,7 +147,7 @@ set -g status-right-length 65
 # Set status bar content.
 #  #[default]
 #  #[dim]
-set -g status-left "#[fg=colour51]@#h #[fg=colour242]• #[fg=cyan]#S #[fg=colour242]• "
+set -g status-left "#[fg=colour51]@#H #[fg=colour242]• #[fg=cyan]#S #[fg=colour242]• "
 set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off }"
 
 # Set non-active window title style.
