tmux: prepend pane number to pane border

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -166,7 +166,7 @@ set -g pane-active-border-style fg=yellow,bg=default
 
 # Set pane border with current command.
 set -wg pane-border-status top
-set -g pane-border-format '#[bold]#{pane_current_command}'
+set -g pane-border-format '#P:#[bold]#{pane_current_command}'
 
 # Load corp configs if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
