--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -5,5 +5,6 @@
     "terminal.integrated.sendKeybindingsToShell": true,
     "workbench.colorTheme": "One Dark Pro",
     "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    "files.autoSave": "off"
 }
