--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -1,10 +1,11 @@
 {
+    "editor.formatOnSave": true,
     "editor.selectionClipboard": false,
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
     "terminal.integrated.sendKeybindingsToShell": true,
     "workbench.colorTheme": "One Dark Pro",
+    "files.autoSave": "off",
     "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "files.autoSave": "off"
+    "files.trimTrailingWhitespace": true
 }
