vscode: enable font ligatures, format on paste

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -1,4 +1,6 @@
 {
+    "editor.fontLigatures": true,
+    "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.selectionClipboard": false,
     "explorer.confirmDelete": false,
