--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -25,6 +25,7 @@
 	l = log --graph --pretty=oneline --abbrev-commit --all
 
 	# hg/fig compatibility
+	purge = clean -f -d
 	reword = commit --amend
 	shelve = stash
 	unshelve = stash apply
