vscode: set linked editing
ref. https://www.roboleary.net/vscode/2020/08/05/dont-need-extensions.html

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -2,12 +2,13 @@
     "editor.fontLigatures": true,
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
+    "editor.linkedEditing": true,
     "editor.selectionClipboard": false,
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
-    "terminal.integrated.sendKeybindingsToShell": true,
-    "workbench.colorTheme": "One Dark Pro",
     "files.autoSave": "off",
     "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true
+    "files.trimTrailingWhitespace": true,
+    "terminal.integrated.sendKeybindingsToShell": true,
+    "workbench.colorTheme": "One Dark Pro"
 }
