--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -147,12 +147,12 @@ set -g status-right-length 65
 # Set status bar content.
 #  #[default]
 #  #[dim]
-set -g status-left "#[fg=colour51]@#H #[fg=colour242]• #[fg=cyan]#S #[fg=colour242]• "
+set -g status-left "#[fg=cyan]@#H #[fg=colour242]• #[fg=cyan]#S #[fg=colour242]• "
 set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off }"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
-setw -g window-status-style fg=colour242,bg=default,dim
+setw -g window-status-style fg=white,bg=default,dim
 
 # Set active window title style.
 set -g window-status-current-format "#I:#W"
