macOS bash: make option + left/right arrow keys move the cursor wordwise
References:

- https://unix.stackexchange.com/a/42635/41858
- https://stackoverflow.com/questions/81272/how-to-move-the-cursor-word-by-word-in-the-os-x-terminal

--- a/shell/.inputrc
+++ b/shell/.inputrc
@@ -46,3 +46,7 @@ set visible-stats on
 "\e[B": history-search-forward
 "\C-p": history-search-backward
 "\C-n": history-search-forward
+
+# macOS Option + Left/Right arrow keys to move the cursor wordwise
+"\e\e[C": forward-word
+"\e\e[D": backward-word
