--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -23,6 +23,7 @@
 
 	# log; there's also gitk and tig
 	l = log --graph --pretty=oneline --abbrev-commit --all
+	xl = branch -vv
 
 	# hg/fig compatibility
 	purge = clean -f -d
