--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -148,7 +148,7 @@ set -g status-right-length 65
 #  #[default]
 #  #[dim]
 set -g status-left "#[fg=cyan]@#H #[fg=colour242]• "
-set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off }"
+set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off#[nodim] }"
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
