vscode: disable c++ intellisense

--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -10,5 +10,6 @@
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
     "terminal.integrated.sendKeybindingsToShell": true,
-    "workbench.colorTheme": "One Dark Pro"
+    "workbench.colorTheme": "One Dark Pro",
+    "C_Cpp.intelliSenseEngine": "Disabled"
 }
