tmux: make Home/End keys work with custom TERM
xterm-256color does not work but screen-256 color does. Tested on hterm
(SSH app) in Chrome OS

c.f. https://wiki.archlinux.org/title/Home_and_End_keys_not_working

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -73,11 +73,12 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Set $TERM and force 256 colors.
-# Warning: tmux-256 color does not work well in macOS.
+# Warning: tmux-256color does not work well in macOS.
+# Warning: xterm-256color messes up with Home/End keys, c.f. https://wiki.archlinux.org/title/Home_and_End_keys_not_working
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-a-256-colour-terminal
 # https://github.com/tmux/tmux/wiki/FAQ#how-do-i-use-rgb-colour
-set -g default-terminal 'xterm-256color'
-set -as terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal 'screen-256color'
+set -as terminal-overrides ',screen-256color:Tc'
 
 # Enable mouse mode
 #   <prefix> m to toggle
