ack: ignore out and build directories

--- a/ack/.ackrc
+++ b/ack/.ackrc
@@ -1,2 +1,8 @@
 # generate ninja: https://gn.googlesource.com/gn/
 --type-set=gn=.gn,.gni
+
+# chromium
+--ignore-dir=out
+
+# cmake
+--ignore-dir=build
