--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -150,6 +150,8 @@ set -g status-right-length 65
 #  #[dim]
 set -g status-left "#[fg=cyan]@#H #[fg=colour242]• "
 set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off#[nodim] }"
+# https://github.com/tmux/tmux/issues/1500
+set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,default}"'
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
