--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -29,6 +29,7 @@
 	purge = clean -f -d
 	reword = commit --amend
 	shelve = stash
+	uncommit = reset --soft HEAD^
 	unshelve = stash apply
 	unstash = stash apply
 
