tmux: fix status bar brightness on copy mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -151,7 +151,7 @@ set -g status-right-length 65
 set -g status-left "#[fg=cyan]@#H #[fg=colour242]• "
 set -g status-right "#{?client_prefix,^Z ,}#{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]mouse:off#[nodim] }"
 # https://github.com/tmux/tmux/issues/1500
-set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,default}"'
+set-hook -g 'pane-mode-changed' 'set -gF status-style "bg=#{?#{==:#{pane_mode},copy-mode},colour237,default},bright"'
 
 # Set non-active window title style.
 set -g window-status-format "#I:#W"
