gitignore: add macos

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ ssh/.ssh/known_hosts*
 #
 #   git ignore <topic>,<topic2> >> .gitignore
 #
-# Created by https://www.toptal.com/developers/gitignore/api/archlinuxpackages,ssh,vim
-# Edit at https://www.toptal.com/developers/gitignore?templates=archlinuxpackages,ssh,vim
+# Created by https://www.toptal.com/developers/gitignore/api/archlinuxpackages,ssh,vim,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=archlinuxpackages,ssh,vim,macos
 
 ### ArchLinuxPackages ###
 *.tar
@@ -29,6 +29,38 @@ ssh/.ssh/known_hosts*
 
 pkg/
 src/
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
 
 ### SSH ###
 **/.ssh/id_*
@@ -56,4 +88,4 @@ tags
 # Persistent undo
 [._]*.un~
 
-# End of https://www.toptal.com/developers/gitignore/api/archlinuxpackages,ssh,vim
+# End of https://www.toptal.com/developers/gitignore/api/archlinuxpackages,ssh,vim,macos
