ssh: macos: set UseKeychain

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -11,6 +11,13 @@ Host *
 	# default lifetime, as if by ssh-add(1).
 	AddKeysToAgent yes
 
+	# This is a macOS only option that looks for passwords for the keys
+	# in the keychain. Ignore if it is an unknown option.
+	# https://apple.stackexchange.com/q/48502/150911
+	# Then: ssh-add -K ~/.ssh/<private key>
+	IgnoreUnknown UseKeychain
+	UseKeychain yes
+
 	# Requests compression of all data.
 	Compression yes
 
