--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -68,6 +68,9 @@ bind-key -T copy-mode-vi Y send-keys Vy
 # Copy selection and exit copy-mode.
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel  # alt: copy-selection
 
+# https://gitlab.com/gnachman/iterm2/-/wikis/tmux-Integration-Best-Practices#shell-integration-and-iterm2-utilities-broke-in-tmux-33
+set-option -g allow-passthrough on
+
 # Start to count from 1 just like tiling window managers
 set -g base-index 1
 setw -g pane-base-index 1
