tmux: set allow-passthrough quietly

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -69,7 +69,8 @@ bind-key -T copy-mode-vi Y send-keys Vy
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel  # alt: copy-selection
 
 # https://gitlab.com/gnachman/iterm2/-/wikis/tmux-Integration-Best-Practices#shell-integration-and-iterm2-utilities-broke-in-tmux-33
-set -g allow-passthrough on
+# -q because only available from 3.3a onwards: https://github.com/tmux/tmux/issues/3218#issuecomment-1365063163
+set -gq allow-passthrough on
 
 # Start to count from 1 just like tiling window managers
 set -g base-index 1
